Fixed extra space after textarea

--- a/src/elements/textarea.css
+++ b/src/elements/textarea.css
@@ -1,4 +1,5 @@
 textarea {
+	vertical-align: top;
 	margin: 0; /* Firefox */
 	border: none;
 	border-radius: var(--border-radius);
